# llvm-next-function-merging

./: .clang-format-ignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/actions/install-llvm-toolchain/: action.yml
.github/workflows/: test.yml
docs/: BenchmarkTips.md  Fuzzing.md
include/llvm/ADT/: ArrayView.h  FixedBitVector.h  SADiagonalWindows.h  SAHirschberg.h  SANeedlemanWunsch.h  SequenceAlignment.h  TensorTable.h
include/llvm/Analysis/: DumpFunctionSize.h  InstCount2.h
include/llvm/Transforms/IPO/: ExtractGV2.h  FMSA.h  FastFM.h  Fingerprint.h  FunctionMerging.h  FunctionMergingOptions.h  FunctionSizeEstimation.h  LegacySequenceAligner.h  MergeAnnotation.h  MultipleSequenceAlignment.h  SALSSACodeGen.h  SearchStrategy.h
include/llvm/Transforms/IPO/MSA/: MSAAlignmentEntry.h  MultipleSequenceAligner.h  NeedlemanWunschMultipleSequenceAligner.h
include/llvm/Transforms/IPO/tsl/: robin_hash.h  robin_map.h  robin_set.h
lib/: CMakeLists.txt
lib/Analysis/: DumpFunctionSize.cpp  InstCount2.cpp
lib/Transforms/IPO/: CMakeLists.txt  ExtractGV2.cpp  FMSA.cpp  FastFM.cpp  FunctionMerging.cpp  FunctionMergingUtils.cpp  FunctionMergingUtils.h  FunctionSizeEstimation.cpp  LegacySequenceAligner.cpp  MatchingUtils.h  MergeAnnotation.cpp  MergeSimilarFunctions.cpp  MinSizeAttr.cpp  MultipleSequenceAlignment.cpp  NextFMLoader.cpp  NextFMLoaderForMore.cpp  NextFMLoaderForTwo.cpp  SALSSACodeGen.cpp
lib/Transforms/IPO/MSA/: BlockAlignment.h  HyFMMultipleSequenceAligner.cpp  MultipleSequenceAligner.cpp  NeedlemanWunschMultipleSequenceAligner.cpp
test/: CMakeLists.txt  lit.cfg  lit.cfg.in
test/Transforms/NextFM/: basic.ll  minimize_select.ll  multiple_operand_switch.ll  select_split_inst_result.ll  simple_msa.ll  simple_msa_min.ll  simple_msa_wip.ll  small3.ll
test/Transforms/NextFM/CodeGen/libjpeg/: 0_multiple-func-merging_CodeGen.ll  14_multiple-func-merging_CodeGen.ll  15_jpeg_set_colorspace_emit_byte_emit_sof.reduced.ll  1_multiple-func-merging_CodeGen.ll  1_multiple-func-merging_UnprofitableMerge.ll  2_multiple-func-merging_CodeGen.ll  2_multiple-func-merging_UnprofitableMerge.ll  3_multiple-func-merging_CodeGen.ll  3_multiple-func-merging_UnprofitableMerge.ll  4_multiple-func-merging_CodeGen.ll  5_multiple-func-merging_CodeGen.ll  8_multiple-func-merging_UnprofitableMerge.ll  9_multiple-func-merging_CodeGen.ll  build_ycc_rgb_table.43_build_ycc_rgb_table.ll  decode_mcu_AC_refine_decode_mcu_AC_first.ll  decode_mcu_DC_first_decode_mcu_DC_refine.ll  encode_mcu_AC_refine_encode_mcu_AC_first.ll  encode_mcu_AC_refine_encode_mcu_AC_first.reduced.ll  get_8bit_row_get_8bit_gray_row_get_24bit_row.ll  get_app0_get_app14.ll  get_app0_get_app14.reduced.ll  get_interlaced_row_get_8bit_row.267.ll  get_interlaced_row_get_8bit_row.267.reduced.1.ll  get_interlaced_row_get_8bit_row.267.reduced.ll  get_sof_get_sos.ll  jinit_c_master_control_jinit_d_post_controller_jpeg_new_colormap.ll  jpeg_idct_4x4_jpeg_idct_2x2.ll  jpeg_set_colorspace_emit_byte_emit_sof.ll  per_scan_setup_per_scan_setup.31.ll  post_process_2pass_post_process_prepass.ll  post_process_2pass_post_process_prepass.reduced0.ll  read_rle_pixel_read_non_rle_pixel.ll  text_getc_pbm_getc.ll
test/Transforms/NextFM/CodeGen/libjpeg/Inputs/: 15_jpeg_set_colorspace_emit_byte_emit_sof.driver.bc  encode_mcu_AC_refine_encode_mcu_AC_first.driver.bc  jinit_c_master_control_jinit_d_post_controller_jpeg_new_colormap.driver.c  jpeg_set_colorspace_emit_byte_emit_sof.driver.bc  (+3 more)
test/Transforms/NextFM/CodeGen/mibench-automotive-bitcount/: ntbl_bitcount_AR_btbl_bitcount_bitcount_ntbl_bitcnt.ll  ntbl_bitcount_AR_btbl_bitcount_bitcount_ntbl_bitcnt.reduced.ll
test/Transforms/NextFM/CodeGen/mibench-automotive-susan/: 0_multiple-func-merging_Alignment.ll  0_multiple-func-merging_Alignment.reduced.c  0_multiple-func-merging_Alignment.reduced.ll  1_multiple-func-merging_Alignment.ll  3_susan_edges_susan_edges_small.reduced.ll  susan_edges_susan_edges_small.ll  susan_edges_susan_edges_small.reduced.ll  susan_principle_susan_principle_small.g.ll  susan_principle_susan_principle_small.g.reduced.ll  susan_principle_susan_principle_small.ll  susan_principle_susan_principle_small.reduced.ll
test/Transforms/NextFM/CodeGen/rustc-perf/: _ZN4core5slice4sort7recurse_CodeGen.ll  _ZN4core5slice4sort7recurse_CodeGen_reduced0.ll  _ZN4core5slice4sort7recurse_CodeGen_reduced1.ll  _ZN8regalloc7bt_main10alloc_main.ll  _ZN8regalloc7bt_main10alloc_main.reduced0.ll  _ZN8regalloc7bt_main10alloc_main.reduced1.ll  _ZN8regalloc7bt_main10alloc_main.reduced2.ll  _ZN8regalloc7bt_main10alloc_main.reduced3.ll  _ZN8regalloc7bt_main10alloc_main.reduced4.ll
test/Transforms/NextFM/HyFM/: 0_multiple-func-merging_UnprofitableMerge.ll  0_multiple-func-merging_UnprofitableMerge.reduced.ll  basic.ll
test/Transforms/NextFM/crashers/: nfm0.ll
tools/: CMakeLists.txt  ll2dot  llvm-nextfm-opt.in  reduce-lit
tools/lib/: markdown.rb
tools/llvm-nextfm-remark/: compare-mergesize.rb  llvm-nextfm-remark.rb  stats.rb
tools/llvm-nextfm-sa-fuzzer/: CMakeLists.txt  SequenceAlignerCheck.cpp  llvm-nextfm-sa-check.cpp  llvm-nextfm-sa-fuzzer.cpp
tools/llvm-nextfm-sizediff/: llvm-nextfm-sizediff.rb  plot.rb  sizediff.rb
tools/llvm-nextfm-sweetspot/: CMakeLists.txt  elf-inspect.rb  llvm-nextfm-sweetspot.cpp  sweetspot.rb
tools/llvm-nextfm-testgen/: CMakeLists.txt  llvm-nextfm-testgen.cpp
tools/x/: Makefile  build.rake  build.rb  dump-table.rb
tools/x/F3M/: FunctionMerging.cpp
tools/x/HyFM/: FunctionMerging.cpp
tools/x/SalSSA/: FunctionMerging.cpp
tools/x/bench-suite/: f3m.rb
tools/x/bench-suite/f3m/: plot.py  setup.sh.patch
tools/x/bench-suite/f3m/experiments/: exp.1.build.py  exp.2.run.py  exp.3.smoke.py
tools/x/bench-suite/f3m/llvm-fakebin/: clang++  llvm-dis
tools/x/bench-suite/llvm-nextfm-benchmark/: .revision
tools/x/example/: 471.omnetpp.min.ll  paint.rb
unittests/: CMakeLists.txt
unittests/Transforms/IPO/: CMakeLists.txt  FixedBitVectorTests.cpp  FunctionMergingUtilsTests.cpp  MultipleSequenceAlignmentTests.cpp  TensorTableTests.cpp
(+41 files in other folders)
